=== 0.1.4 03.03.2015

* Added optional second parameter to specify output file
* Added output for dosis (name, unit, qty) for mono-preparations
* Add selling units ot generated gtin2atc.csv file
* Use ';' as column separator for generated CSV files
* Create file pharmacode_gtin_not_found.txt

=== 0.1.3 27.01.2015

* Clearer filenames

=== 0.1.2 27.01.2015

* Travis should install and test installed gem, too
* Clarified when only matching in 2 of 3 places

=== 0.1.1 27.01.2015

* Create many reporfiles with --compare --full

=== 0.1.0 26.01.2015

* Initial release