@@ -50,8 +50,8 @@ describe Gtin2atc::Builder do
     inhalt = IO.readlines(filename)
     /^\d{13};\w{4}/.should match inhalt[1]
     # Packungsgrösse, Dosierung, DDD, Route of Administration
-    /^gtin;ATC;pharmacode;description;daily drug dose/.should match inhalt.first
-    /^7680316440115;B03AA07;20244;FERRO-GRADUMET Depottabl;0,2 g O Fe2\+;/.should match inhalt.join("\n")
+    /^gtin;ATC;pharmacode;description;selling units;name;qty;unit;ddd:qty;ddd:unit;ddd:full_text/.should match inhalt.first
+    /^7680316440115;B03AA07;20244;FERRO-GRADUMET Depottabl;30;Ferrum(ii);105.0;mg;0.2;g;O Fe2+;Fe2+/.should match inhalt.join("\n")
   end
 
   context 'when 20273 41803 (Pharmacodes) is given' do
@@ -101,8 +101,8 @@ describe Gtin2atc::Builder do
       check_csv(CSV_NAME)
       inhalt = IO.readlines(CSV_NAME)
       inhalt.size.should eq 2+1 # one header lines + two items
-      inhalt[1].chomp.should eq '7680147690482;N07BC02;41803;KETALGIN Inj Lös 10 mg/ml;25 mg O,P;'
-      inhalt[2].chomp.should eq '7680353660163;B03AE10;20273;KENDURAL Depottabl;;'
+      inhalt[1].chomp.should eq '7680147690482;N07BC02;41803;KETALGIN Inj Lös 10 mg/ml;;;;;;;25 mg O,P'
+      inhalt[2].chomp.should eq '7680353660163;B03AE10;20273;KENDURAL Depottabl;;;;;;;'
     end
   end
 
@@ -210,8 +210,8 @@ describe Gtin2atc::Builder do
       FileUtils.cp(oddb_calc_xml, Gtin2atc::WorkDir, :verbose => false)
       @res = buildr_capture(:stdout){ cli.run() }
       check_csv(CSV_NAME)
-      inhalt = IO.readlines(CSV_NAME)
-      inhalt.index("7680316440115;B03AA07;20244;FERRO-GRADUMET Depottabl;0,2 g O Fe2+;30;Ferrum(ii);105.0;mg\n").should_not == nil
+      inhalt = IO.read(CSV_NAME)
+      inhalt.index("\n7680316440115;B03AA07;20244;FERRO-GRADUMET Depottabl;;;30;Ferrum(ii);105.0;mg;0,2 g O Fe2+\n").should_not == nil
     end
   end
 
