@@ -1,5 +1,6 @@
 === 0.1.4 03.03.2015
 
+* Added exfactory and public price
 * Added optional second parameter to specify output file
 * Added output for dosis (name, unit, qty) for mono-preparations
 * Add selling units ot generated gtin2atc.csv file
